memo/memo-with-references/tests/10-no-mutable-self.stderr
error: memoizable functions cannot have mutable self parameter
 --> tests/10-no-mutable-self.rs:7:19
  |
7 |     fn memome<'a>(&mut self, cache: &'a str) {}
  |                   ^^^^^^^^^
