memo/memo-with-references/tests/10-no-mutable-self.rs
use memo_with_references::memo;

struct Foo;

impl Foo {
    #[memo(cache)]
    fn memome<'a>(&mut self, cache: &'a str) {}
}

fn main() {}
